# fastapi-module-app

./: .env  docker-compose.override.yml  docker-compose.yml
.devcontainer/: devcontainer.json
app/: pyproject.toml
app/app/: config.py  main.py
app/app/auth/: __init__.py  routes.py
app/app/core/: security.py
app/app/db/: __init__.py  base.py  session.py
app/app/user/: __init__.py  actions.py  models.py  routes.py  schemas.py
app/tests/: conftest.py
app/tests/auth/: test_routes.py
app/tests/core/: test_security.py
app/tests/user/: test_actions.py
app/tests/utils/: test_db.py  user.py
